--- a/index.html
+++ b/index.html
@@ -8,3 +8,38 @@
   0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
   rel="stylesheet">
   <title>aluraflix</title>
+  </head>
+  <body>
+    <header>ALURAFLIX<header>
+      <section class="chamada">
+        <div class="chamada-texto">
+          <h1> BARBIE RAPUNZEL</h1>
+          <p>#barbie rapunzel</p>
+        </div>
+        <div>
+          <iframe width="560" height="315" scr="https://youtu.be/SrZDemtgpUE?si=tT9ZohGRtuPliKT"
+            title="YouTube video player" frameborder="0"
+            allow="accelerrometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+      </section>
+      <section class="categoria">
+        <h2>Filmes e séries</h2>
+        <div class="categoria-videos">
+          <a href= "https://youtu.be/DsBXbhSdDas?si=2bueicjGWbjb0VKT">
+              <img scr="https://images.app.goo.gl/ooK2WWGrwU67tHjNA"/>
+          </a>
+          
+          <a href="https://youtu.be/xuCnIPDN-Ms?si=jdVmM2vhr-4pKe7a">
+             <img scr="https://images.app.goo.gl/SuhAr24E8291hoeA9"/>
+          </a>
+          
+          <a href="https://youtu.be/MKDsl_qVfdo?si=Y9wOaMC8BP6Gh2T9">
+             <img scr="https://images.app.goo.gl/JdEWTzCrAjKGu7FM6"/>
+          </a>
+        </div>
+      </section>
+
+    </body>
+
+    </html>
