--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
   <head>
 <link rel="stylrsheet" href="styles.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https:q/fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link
-  href="https://fonts.googleapis.comqcss2?family=Chakra+Petch:ital,wght@0,300;0,400;
+  href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;
   0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
   rel="stylesheet">
-  <title>aluraflix</title>
+  <title>Aluraflix</title>
   </head>
   <body>
-    <header>ALURAFLIX<header>
+    <header>ALURAFLIX</header>
       <section class="chamada">
         <div class="chamada-texto">
-          <h1> BARBIE RAPUNZEL</h1>
+          <h1>BARBIE RAPUNZEL</h1>
           <p>#barbie rapunzel</p>
         </div>
         <div>
